--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native/new-app-screen": "0.80.0",
     "react": "19.1.0",
     "react-native": "0.80.0",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-razorpay": "^2.3.0",
     "react-native-safe-area-context": "^5.5.0",
     "socket.io-client": "^4.8.1"
