--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native/new-app-screen": "0.80.0",
+    "jsonwebtoken": "^9.0.2",
     "react": "19.1.0",
     "react-native": "0.80.0",
     "react-native-linear-gradient": "^2.8.3",
