--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native-linear-gradient": "^2.8.3",
     "react-native-razorpay": "^2.3.0",
     "react-native-safe-area-context": "^5.5.0",
+    "react-native-svg": "^15.12.0",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
@@ -37,6 +38,7 @@
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
+    "react-native-svg-transformer": "^1.5.1",
     "react-test-renderer": "19.1.0",
     "typescript": "5.0.4"
   },
