--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,32 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.INTERNET" />
-<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_SMS" />
+    <uses-permission android:name="android.permission.RECEIVE_SMS" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+
+    <!-- Queries for UPI apps and payment methods -->
+    <queries>
+        <intent>
+            <action android:name="android.intent.action.VIEW" />
+            <category android:name="android.intent.category.BROWSABLE" />
+            <data android:scheme="upi" />
+        </intent>
+        <package android:name="net.one97.paytm" />
+        <package android:name="com.phonepe.app" />
+        <package android:name="com.google.android.apps.nbu.paisa.user" />
+        <package android:name="in.org.npci.upiapp" />
+        <package android:name="com.amazon.mShop.android.shopping" />
+        <package android:name="com.mobikwik_new" />
+        <package android:name="com.freecharge.android" />
+        <package android:name="com.axis.mobile" />
+        <package android:name="com.sbi.lotusintouch" />
+        <package android:name="com.icicibank.pockets" />
+        <package android:name="com.csam.icici.bank.imobile" />
+        <package android:name="com.snapwork.hdfc" />
+    </queries>
 
     <application
       android:name=".MainApplication"
@@ -11,6 +36,7 @@
       android:allowBackup="false"
       android:theme="@style/AppTheme"
       android:supportsRtl="true">
+      
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
@@ -23,5 +49,48 @@
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
       </activity>
+      
+      <activity
+        android:name="com.razorpay.RzpTokenReceiver"
+        android:exported="false">
+        <intent-filter>
+            <action android:name="rzp.device_token.share" />
+        </intent-filter>
+      </activity>
+      
+      <!-- Razorpay activities for native checkout -->
+      <activity
+        android:name="com.razorpay.CheckoutActivity"
+        android:exported="false"
+        android:theme="@style/CheckoutTheme"
+        android:configChanges="keyboard|keyboardHidden|orientation|screenSize">
+      </activity>
+      
+      <activity
+        android:name="com.razorpay.PaymentActivity"
+        android:exported="false"
+        android:theme="@style/CheckoutTheme"
+        android:configChanges="keyboard|keyboardHidden|orientation|screenSize">
+      </activity>
+      
+      <activity
+        android:name="com.razorpay.PaymentResultWithDataActivity"
+        android:exported="false"
+        android:configChanges="keyboard|keyboardHidden|orientation|screenSize">
+      </activity>
+      
+      <activity
+        android:name="com.razorpay.ValidateVpaActivity"
+        android:exported="false"
+        android:configChanges="keyboard|keyboardHidden|orientation|screenSize">
+      </activity>
+      
+      <!-- Force native checkout activity -->
+      <activity
+        android:name="com.razorpay.RzpAssist"
+        android:exported="false"
+        android:theme="@style/CheckoutTheme">
+      </activity>
+      
     </application>
 </manifest>
