--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,5 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -29,68 +30,52 @@
     </queries>
 
     <application
-      android:name=".MainApplication"
-      android:label="@string/app_name"
-      android:icon="@mipmap/ic_launcher"
-      android:roundIcon="@mipmap/ic_launcher_round"
-      android:allowBackup="false"
-      android:theme="@style/AppTheme"
-      android:supportsRtl="true">
-      
-      <activity
-        android:name=".MainActivity"
-        android:label="@string/app_name"
-        android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|screenSize|smallestScreenSize|uiMode"
-        android:launchMode="singleTask"
-        android:windowSoftInputMode="adjustResize"
-        android:exported="true">
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
-      </activity>
-      
-      <activity
-        android:name="com.razorpay.RzpTokenReceiver"
-        android:exported="false">
-        <intent-filter>
-            <action android:name="rzp.device_token.share" />
-        </intent-filter>
-      </activity>
-      
-      <!-- Razorpay activities for native checkout -->
-      <activity
-        android:name="com.razorpay.CheckoutActivity"
-        android:exported="false"
-        android:theme="@style/CheckoutTheme"
-        android:configChanges="keyboard|keyboardHidden|orientation|screenSize">
-      </activity>
-      
-      <activity
-        android:name="com.razorpay.PaymentActivity"
-        android:exported="false"
-        android:theme="@style/CheckoutTheme"
-        android:configChanges="keyboard|keyboardHidden|orientation|screenSize">
-      </activity>
-      
-      <activity
-        android:name="com.razorpay.PaymentResultWithDataActivity"
-        android:exported="false"
-        android:configChanges="keyboard|keyboardHidden|orientation|screenSize">
-      </activity>
-      
-      <activity
-        android:name="com.razorpay.ValidateVpaActivity"
-        android:exported="false"
-        android:configChanges="keyboard|keyboardHidden|orientation|screenSize">
-      </activity>
-      
-      <!-- Force native checkout activity -->
-      <activity
-        android:name="com.razorpay.RzpAssist"
-        android:exported="false"
-        android:theme="@style/CheckoutTheme">
-      </activity>
-      
-    </application>
+  android:name=".MainApplication"
+  android:label="@string/app_name"
+  android:icon="@mipmap/ic_launcher"
+  android:roundIcon="@mipmap/ic_launcher_round"
+  android:allowBackup="false"
+  android:theme="@style/AppTheme"
+  android:supportsRtl="true"
+  android:usesCleartextTraffic="false"
+  android:networkSecurityConfig="@xml/network_security_config"
+  tools:replace="android:usesCleartextTraffic">
+
+  <activity
+    android:name=".MainActivity"
+    android:label="@string/app_name"
+    android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|screenSize|smallestScreenSize|uiMode"
+    android:launchMode="singleTask"
+    android:windowSoftInputMode="adjustResize"
+    android:exported="true">
+    <intent-filter>
+      <action android:name="android.intent.action.MAIN" />
+      <category android:name="android.intent.category.LAUNCHER" />
+    </intent-filter>
+  </activity>
+
+  <!-- ✅ VALID Razorpay Activities -->
+  <activity
+    android:name="com.razorpay.CheckoutActivity"
+    android:exported="false"
+    android:theme="@style/CheckoutTheme"
+    android:configChanges="keyboard|keyboardHidden|orientation|screenSize" />
+
+  <activity
+    android:name="com.razorpay.PaymentActivity"
+    android:exported="false"
+    android:theme="@style/CheckoutTheme"
+    android:configChanges="keyboard|keyboardHidden|orientation|screenSize" />
+
+  <activity
+    android:name="com.razorpay.PaymentResultWithDataActivity"
+    android:exported="false"
+    android:configChanges="keyboard|keyboardHidden|orientation|screenSize" />
+
+  <activity
+    android:name="com.razorpay.ValidateVpaActivity"
+    android:exported="false"
+    android:configChanges="keyboard|keyboardHidden|orientation|screenSize" />
+</application>
+
 </manifest>
