--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -41,19 +41,27 @@
   android:networkSecurityConfig="@xml/network_security_config"
   tools:replace="android:usesCleartextTraffic">
 
+  <!-- Splash Activity as Launcher -->
+  <activity
+    android:name=".SplashActivity"
+    android:exported="true"
+    android:theme="@style/SplashTheme"
+    android:screenOrientation="portrait">
+    <intent-filter>
+      <action android:name="android.intent.action.MAIN" />
+      <category android:name="android.intent.category.LAUNCHER" />
+    </intent-filter>
+  </activity>
+
+  <!-- Main Activity -->
   <activity
     android:name=".MainActivity"
     android:label="@string/app_name"
     android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|screenSize|smallestScreenSize|uiMode"
     android:launchMode="singleTask"
     android:windowSoftInputMode="adjustResize"
-    android:theme="@style/SplashTheme"
-    android:exported="true">
-    <intent-filter>
-      <action android:name="android.intent.action.MAIN" />
-      <category android:name="android.intent.category.LAUNCHER" />
-    </intent-filter>
-  </activity>
+    android:theme="@style/AppTheme"
+    android:exported="false" />
 
   <!-- ✅ VALID Razorpay Activities -->
   <activity
