--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,11 +3,6 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.READ_SMS" />
-    <uses-permission android:name="android.permission.RECEIVE_SMS" />
-    
-    <!-- Google Play Integrity API permissions -->
-    <uses-permission android:name="com.google.android.gms.permission.AD_ID" />
 
     <!-- Queries for UPI apps and payment methods -->
     <queries>
@@ -35,12 +30,10 @@
   android:label="@string/app_name"
   android:icon="@mipmap/ic_launcher"
   android:roundIcon="@mipmap/ic_launcher_round"
-  android:allowBackup="false"
+  android:allowBackup="true"
   android:theme="@style/AppTheme"
   android:supportsRtl="true"
-  android:usesCleartextTraffic="false"
-  android:networkSecurityConfig="@xml/network_security_config"
-  tools:replace="android:usesCleartextTraffic">
+  android:usesCleartextTraffic="true">
 
   <!-- Splash Activity as Launcher -->
   <activity
@@ -87,7 +80,7 @@
     android:exported="false"
     android:configChanges="keyboard|keyboardHidden|orientation|screenSize" />
 
-  <!-- Play Integrity API removed - not needed for non-Play Store apps -->
+
 </application>
 
 </manifest>
