--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "jsonwebtoken": "^9.0.2",
     "react": "19.1.0",
     "react-native": "0.80.0",
+    "react-native-fs": "^2.20.0",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-permissions": "^4.1.5",
     "react-native-razorpay": "^2.3.0",
     "react-native-safe-area-context": "^5.5.0",
     "react-native-svg": "^15.12.0",
