--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -6,6 +6,8 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <!-- Queries for UPI apps and payment methods -->
     <queries>
@@ -93,6 +95,28 @@
       android:name="android.support.FILE_PROVIDER_PATHS"
       android:resource="@xml/file_paths" />
   </provider>
+
+  <!-- Firebase Messaging Service -->
+  <service
+    android:name="io.invertase.firebase.messaging.ReactNativeFirebaseMessagingService"
+    android:exported="false">
+    <intent-filter>
+      <action android:name="com.google.firebase.MESSAGING_EVENT" />
+    </intent-filter>
+  </service>
+
+  <!-- Firebase Messaging Default Notification Channel -->
+  <meta-data
+    android:name="com.google.firebase.messaging.default_notification_icon"
+    android:resource="@mipmap/ic_launcher" />
+  <meta-data
+    android:name="com.google.firebase.messaging.default_notification_color"
+    android:resource="@color/notification_color"
+    tools:replace="android:resource" />
+  <meta-data
+    android:name="com.google.firebase.messaging.default_notification_channel_id"
+    android:value="budzee_notifications"
+    tools:replace="android:value" />
 
 </application>
 
