--- a/android/build.gradle
+++ b/android/build.gradle
@@ -15,6 +15,7 @@ buildscript {
         classpath("com.android.tools.build:gradle:8.3.1") // ✅ Add stable version
         classpath("com.facebook.react:react-native-gradle-plugin")
         classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:1.9.22") // ✅ Match above
+        classpath("com.google.gms:google-services:4.4.0") // Google Services plugin
     }
 }
 
